# RTOC

./: .gitbugtraq  .gitignore  README.md  fagprojekter.md  license  testfil.rtf
src/AcquisitionApp/: CMakeLists.txt  main.cpp
src/AcquisitionApp/SiliconSoftwareSrc/: DmaMemWrapper.cpp  FgExample.cpp  FgWrapper.h  acquisitionhelpers.cpp  fg_pixel.h
src/AcquisitionApp/acquisitor_src/: DisplayWrapper.h  DmaMemWrapper.h  FgExample.h  FgWrapper.cpp  acquisitionhelpers.cpp  acquisitor.cpp  acquisitor.h
src/AcquisitionApp/src/: acquisitionhelpers.cpp  acquisitionwidget.cpp  acquisitionwidget.ui  acquisitor.cpp  acquisitor.h  imagedisplayer.cpp  imagedisplayer.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/CellSorter/: CMakeLists.txt  CShelper.h  analyzer.cpp  analyzer.h  main.cpp  parameter.h  patient.h  prettyprint.h  process.cpp  process.h  rbc.h  testOut.txt
src/CellSorter/AcquisitionApp/: CMakeLists.txt  main.cpp
src/CellSorter/AcquisitionApp/acquisitor_src/: acquisitor.cpp  acquisitor.h
src/CellSorter/AcquisitionApp/src/: acquisitionwidget.h  ironmanwidget.cpp  ironmanwidget.h  logger.h
src/CellSorter/gui/: acquisitioninterface.cpp  acquisitioninterface.h  configurator.cpp  configurator.h  configurator.ui  experimentprogresswidget.cpp  experimentprogresswidget.h  experimentprogresswidget.ui  experimentrunner.cpp  experimentrunner.h  experimentrunner.ui  experimentsetup.cpp  experimentsetup.h  experimentsetup.ui  folderacquisition.h  genericcamerawidget.cpp  genericcamerawidget.h  genericcamerawidget.ui  guihelpers.cpp  guihelpers.h  imagedisplayerwidget.cpp  imagedisplayerwidget.h  imagedisplayerwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  parameterdelegate.cpp  processinterface.cpp  processinterface.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
src/CellSorter/ironman_lib/: .gitignore
src/CellSorter/ironman_lib/acquisitor_src/: FgExample.h  FgWrapper.cpp
src/CellSorter/ironman_lib/src/: cameradisplayerwidget.h  ironmanwidget.cpp  ironmanwidget.h  ironmanwidget.ui
src/CellSorter/lib/: Experiment.h  PythonWrapper.cpp  PythonWrapper.h  analyzer.cpp  analyzer.h  datacontainer.cpp  datacontainer.h  experiment.h  experimentsetup.cpp  experimentsetup.h  experimentsetup.ui  framefinder.cpp  framefinder.h  helper.h  imagewriter.h  machinelearning.cpp  machinelearning.h  mathlab.cpp  mathlab.h  matlab_ext.cpp  matlab_ext.h  objectfinder.cpp  objectfinder.h  parameter.h  prettyprint.h  process.cpp  process.h  rbc.h  setup.h  timer.cpp  timer.h  tracker.h
src/CellSorter/tst/: catch_analyzer.cpp  catch_datacontainer.cpp  catch_framefinder.cpp  catch_machinelearning.cpp  catch_mathlab.cpp  catch_matlab_ext.cpp  catch_parameter.cpp  catch_process.cpp  catch_serialize_uniqueptr.cpp  test_datacontainer.cpp  test_framefinder.cpp  test_image_generator.cpp  test_main.cpp  test_parameter.cpp
src/CellSorter/tst_catch/: catch_framefinder.cpp  main.cpp
src/CellSorter/unused/: datacontainer.cpp  datacontainer.h  test_datacontainer.cpp
src/FrameFinder/: CMakeLists.txt  FFhelpers.h  framefinder.h  main.cpp  timer.h
src/Helpers/CheckDevices/: CMakeLists.txt  main.cpp
src/SDKExamplesNew/examples/: CMakeLists.txt
src/SDKExamplesNew/examples/ExampleHelper/: CMakeLists.txt  DisplayWrapper.cpp  DmaMemWrapper.cpp  LoggingHelper.cpp  SgcExample.cpp  SgcExample.h  SgcWrapper.h  projectGenerator.py
src/SDKExamplesNew/examples/fglib/Acquisition/AcqAPC/: CMakeLists.txt  FgAcqAPCExample.cpp  FgAcqAPCExample.h  main.cpp
src/SDKExamplesNew/examples/fglib/Acquisition/AcqAPCBlock/: CMakeLists.txt  FgAcqAPCBlockExample.cpp  FgAcqAPCBlockExample.h  main.cpp
src/SDKExamplesNew/examples/fglib/Acquisition/AcqBlock/: CMakeLists.txt  FgAcqBlockExample.cpp  main.cpp
src/SDKExamplesNew/examples/fglib/Acquisition/AcqMasterSlave/: CMakeLists.txt  FgAcqMasterSlaveExample.cpp  FgAcqMasterSlaveExample.h  main.cpp
src/SDKExamplesNew/examples/fglib/Acquisition/AcqStandard/: CMakeLists.txt  FgAcqStandardExample.cpp  main.cpp
src/SDKExamplesNew/examples/fglib/Events/: CMakeLists.txt  FgEventExample.cpp  FgEventExample.h  main.cpp
src/SDKExamplesNew/examples/fglib/Events/vc10_win32/: ALL_BUILD.vcxproj  FgEventExample.sln  FgEventExample.vcxproj  FgEventExample.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters
src/SDKExamplesNew/examples/fglib/Events/vc10_win64/: ALL_BUILD.vcxproj  FgEventExample.sln  FgEventExample.vcxproj  FgEventExample.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters
src/SDKExamplesNew/examples/fglib/Initialization/FgAppletIterator/: CMakeLists.txt  FgAppletIteratorExample.cpp  main.cpp
src/SDKExamplesNew/examples/fglib/Initialization/FgDmaChannel/: CMakeLists.txt  FgDmaChannelExample.cpp  main.cpp
src/SDKExamplesNew/examples/fglib/Initialization/FgInitConfig/: CMakeLists.txt  FgInitConfigExample.cpp  main.cpp
src/SDKExamplesNew/examples/fglib/Initialization/FgInitDll/: CMakeLists.txt  FgInitDllExample.cpp  main.cpp
src/SDKExamplesNew/examples/gbe/Acquisition/: CMakeLists.txt  GbeAcquisitionExample.cpp  main.cpp
src/SDKExamplesNew/examples/gbe/CameraConnection/: CMakeLists.txt  GbeCameraConnectionExample.cpp  main.cpp
src/SDKExamplesNew/examples/gbe/CameraDetection/: CMakeLists.txt  GbeCameraDetectionExample.cpp  main.cpp
src/SDKExamplesNew/examples/gbe/Events/: CMakeLists.txt  GbeEventExample.cpp  main.cpp
src/SDKExamplesNew/examples/include/: globalFunctions.h
src/SDKExamplesNew/examples/iolibrt/tiff/: CMakeLists.txt  iolibrtTiffExample.cpp  main.cpp
src/SDKExamplesNew/examples/siso_genicam/Acquisition/: CMakeLists.txt  SgcAcquisitionExample.cpp  main.cpp
src/SDKExamplesNew/examples/siso_genicam/AcquisitionWithLogging/: CMakeLists.txt  main.cpp
src/SDKExamplesNew/examples/siso_genicam/Discovery_Automatic/: CMakeLists.txt  SgcAutoDiscoveryExample.cpp  main.cpp
src/SDKExamplesNew/examples/siso_genicam/Discovery_Manual/: CMakeLists.txt  SgcManualDiscoveryExample.cpp  main.cpp
src/SDKExamplesNew/examples/siso_genicam/Parameter/: CMakeLists.txt  SgcParameterExample.cpp  main.cpp
(+391 files in other folders)
